Fixed text-align issue in section 3

--- a/style.css
+++ b/style.css
@@ -164,12 +164,12 @@ nav a {
 #selling-points > div {
   display: flex;
   justify-content: space-evenly;
-  align-items: flex-start;
   margin: 50px 0px 50px 0px;
 }
 
 #selling-points > div > div {
   width: 17%;
+  text-align: left;
 }
 
 #selling-points h5 {
